# extended-data

./: .gitignore  .release-please-manifest.json  AGENTIC_REINFORCEMENT.md  AGENTS.md  CHANGELOG.md  README.md  SECRETS_SYNC_ALIGNMENT.md  pyproject.toml  release-please-config.json  tox.ini
.github/: dependabot.yml
.github/workflows/: cd-pytest-extended-data.yml  cd.yml  ci.yml  release.yml
docs/: CNAME  PUBLISHING_CHECKLIST.md  PUBLISHING_CHECKLIST.rst  architecture.rst  conf.py  getting-started.md  index.md  index.rst  ownership-map.md  ownership-map.rst  package-surface.md  package-surface.rst  pillars.rst  publishing.md  publishing.rst
docs/_static/: extended-data.css
docs/core/: containers.md  primitives.md  workflows.md  workflows.rst
docs/examples/: connectors.md  core.md  core.rst  index.md  inputs.md  inputs.rst  logging.md
docs/integrations/: connectors.md  secrets.md
docs/operations/: inputs.md  inputs.rst  logging.md  logging.rst
examples/connectors/: README.md  basic_aws.py  basic_google.py  basic_meshy.py  basic_secrets.py  langchain_tools.py  mcp_server.py
examples/core/: README.md  basic_usage.py  composed_workflows.py  file_operations.py  serialization.py  string_transformations.py
examples/inputs/: README.md  __init__.py  basic_usage.py  decorator_api.py  encoding_decoding.py
examples/logging/: README.md  exit_run_formatting.py  markers_and_storage.py  verbosity_control.py
src/extended_data/: __init__.py  base64_utils.py  cli.py  export_utils.py  file_data_type.py  hcl2_utils.py  import_utils.py  map_data_type.py  matcher_utils.py  splitter_utils.py  toml_utils.py  type_utils.py
src/extended_data/connectors/: __init__.py  _compat.py  _optional.py  ai_tools.py  base.py  cli.py  cloud_params.py  connectors.py  mcp.py  redaction.py  registry.py  surface.py
src/extended_data/connectors/anthropic/: __init__.py  tools.py
src/extended_data/connectors/aws/: __init__.py  _diagnostics.py  codedeploy.py  organizations.py  s3.py  sso.py  tools.py
src/extended_data/connectors/cursor/: __init__.py  tools.py
src/extended_data/connectors/github/: __init__.py  tools.py
src/extended_data/connectors/google/: __init__.py  billing.py  cloud.py  jules.py  services.py  tools.py  workspace.py
src/extended_data/connectors/meshy/: README.md  __init__.py  animate.py  animations.py  base.py  connector.py  image3d.py  jobs.py  logging.py  mcp.py  retexture.py  rigging.py  text3d.py  tools.py
src/extended_data/connectors/meshy/persistence/: __init__.py  repository.py  vector_store.py
src/extended_data/connectors/meshy/webhooks/: __init__.py  (+2 more)
src/extended_data/connectors/secrets/: __init__.py  tools.py
src/extended_data/connectors/slack/: __init__.py  tools.py
src/extended_data/connectors/vault/: __init__.py  tools.py
src/extended_data/connectors/zoom/: __init__.py  tools.py
src/extended_data/containers/: __init__.py  data.py  factory.py  mappings.py  sequences.py  strings.py
src/extended_data/inputs/: __init__.py  __main__.py  decorators.py
src/extended_data/io/: __init__.py  base64.py  exporters.py  files.py  importers.py
src/extended_data/logging/: __init__.py  logging.py  utils.py
src/extended_data/primitives/: __init__.py  matching.py  redaction.py  sequences.py  strings.py  types.py
src/extended_data/primitives/formats/: __init__.py  errors.py  hcl.py  json.py  toml.py
src/extended_data/primitives/transformations/: __init__.py
src/extended_data/secrets/: __init__.py  tools.py
src/extended_data/transformations/: __init__.py
src/extended_data/transformations/numbers/: __init__.py  notation.py
src/extended_data/transformations/strings/: __init__.py
src/extended_data/workflows/: __init__.py  sync.py
src/extended_data/yaml_utils/: __init__.py  constructors.py  dumpers.py  loaders.py  representers.py  utils.py
tests/connectors/: conftest.py  test_ai_tools.py  test_anthropic.py  test_anthropic_tools.py  test_aws_codedeploy.py  test_aws_connector.py  test_aws_organizations.py  test_aws_s3.py  test_aws_sso.py  test_aws_tools.py  test_base.py  test_cli.py  test_cloud_params.py  test_connector_payload_contracts.py  test_connectors.py  test_cursor.py  test_cursor_tools.py  test_github_connector.py  test_github_payload_contract.py  test_github_tools.py  test_github_workflow_builder.py  test_google_activity.py  test_google_billing.py  test_google_cloud.py  test_google_connector.py  test_google_jules.py  test_google_services.py  test_google_tools.py  test_google_workspace.py  test_mcp.py  test_optional_dependencies.py  test_redaction.py  test_secrets.py  test_slack_connector.py  test_slack_tools.py  test_tool_framework_adapters.py  test_tool_frameworks.py  test_tool_payload_contracts.py  test_vault_connector.py  test_vault_tools.py  (+2 more)
tests/connectors/e2e/meshy/: runners.py  test_crewai.py  test_langchain.py  test_strands.py
tests/connectors/meshy/: conftest.py  test_animations.py  test_jobs.py  test_meshy_base.py  test_meshy_logging.py  test_meshy_mcp.py  test_models.py  test_repository.py  test_task_ids.py  test_tools.py  test_vector_store.py  test_webhooks.py
tests/core/: test_base64_utils.py  test_containers.py  test_export_utils.py  test_file_data_type.py  test_hcl2_utils.py  test_import_utils.py  test_integration_workflows.py  test_json_utils.py  test_list_data_type.py  test_map_data_type.py  test_matcher_utils.py  test_number_transformations.py  test_package_cli.py  test_package_surface.py  test_redaction.py  test_release_hygiene.py  test_serialization_utils.py  test_splitter_utils.py  test_stack_utils.py  test_state_utils.py  test_string_data_type.py  test_string_transformations.py  test_toml_utils.py  test_type_utils.py  test_workflows.py  test_yaml_utils.py
tests/core/transformations/numbers/: test_notation.py  test_words.py
tests/core/transformations/strings/: test_inflection.py
tests/examples/: test_safe_examples.py
tests/inputs/: test_decorators.py  test_main.py
tests/logging/: conftest.py  test_exit_run.py  test_logging.py  test_properties.py
tests/logging/integration/: test_lifecycle_logging.py
(+10 files in other folders)
