[project]
name = "extended-data-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/extended-data",
    "packages/pytest-extended-data",
]

[tool.uv.sources]
extended-data = { workspace = true }
pytest-extended-data = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pip-audit==2.10.0",
    "ruff>=0.8.0",
    "tox>=4.11",
    "tox-gh>=1.3",
    "tox-uv>=1.11",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = [
    "packages/extended-data/tests",
    "packages/pytest-extended-data/tests",
]
xfail_strict = true
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
branch = true
parallel = true
source = [
    "extended_data",
    "pytest_extended_data",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = [
    "packages/extended-data/src",
    "packages/extended-data/tests",
    "packages/extended-data/examples",
    "packages/pytest-extended-data/src",
    "packages/pytest-extended-data/tests",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE001",
    "C901",
    "COM",
    "D105",
    "D205",
    "D415",
    "D417",
    "DTZ007",
    "E402",
    "E501",
    "EM",
    "ERA001",
    "FBT",
    "FIX",
    "G",
    "PERF",
    "PLC0415",
    "PLR0124",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "PTH",
    "RET505",
    "RUF012",
    "S105",
    "S110",
    "S310",
    "S603",
    "SLF001",
    "TCH",
    "TD",
    "TID252",
    "TRY003",
    "TRY300",
    "TRY301",
    "TRY401",
]

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/**" = ["B018", "BLE", "D", "DTZ", "INP001", "LOG001", "N802", "N803", "PLC0415", "PT", "S", "SIM117", "TRY"]
"packages/extended-data/examples/**" = ["D", "EXE001", "INP001", "S110", "SIM105", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
warn_return_any = false
